test integrations