@@ -17,8 +17,10 @@ import ua.tqs.model.Booking;
 import ua.tqs.model.BookingStatus;
 import ua.tqs.repository.BookingRepository;
 
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.util.List;
 
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.hamcrest.Matchers.*;
 
 
@@ -60,6 +62,7 @@ public class BookingControllerTestIT {
     }
 
     @Test
+    @Order(1)
     void testCreateBooking() {
         Booking booking = new Booking();
         booking.setDayIndex(3);
@@ -75,30 +78,31 @@ public class BookingControllerTestIT {
                 .body("email", equalTo(booking.getEmail()))
                 .body("restaurant", equalTo(booking.getRestaurant()))
                 .body("status", equalTo(booking.getStatus().toString()))
-                .body("week", equalTo(booking.getWeek()))
-                .body("createdAt", equalTo(booking.getCreatedAt()));
+                .body("week", equalTo(booking.getWeek()));
     }
 
     @Test
-    void whenGetBookings_thenStatus200() {
+    @Order(2)
+    void givenBookings_whenGetBookings_thenStatus200() {
         Booking booking1 = new Booking();
         booking1.setDayIndex(3);
         booking1.setEmail("test@example.com");
         booking1.setRestaurant("Castro");
         booking1.setStatus(BookingStatus.CONFIRMED);
         booking1.setWeek("13");
+        booking1.setCreatedAt(LocalDateTime.now());
 
         Booking booking2 = new Booking();
-        booking2.setDayIndex(4);
+        booking2.setDayIndex(2);
         booking2.setEmail("test@example.com");
         booking2.setRestaurant("Santiago");
         booking2.setStatus(BookingStatus.CONFIRMED);
         booking2.setWeek("13");
+        booking2.setCreatedAt(LocalDateTime.now());
 
-        bookingRepository.saveAll(Arrays.asList(booking1, booking2));
+        bookingRepository.saveAll(List.of(booking1, booking2));
 
-
-        RestAssured.when().get(BASE_URL)
+        RestAssured.when().get(BASE_URL + "?email=" + booking1.getEmail())
                 .then().statusCode(HttpStatus.OK.value())
                 .body("", hasSize(2))
                 .body("dayIndex", hasItems(booking1.getDayIndex(), booking2.getDayIndex()))
@@ -106,7 +110,34 @@ public class BookingControllerTestIT {
                 .body("restaurant", hasItems(booking1.getRestaurant(), booking2.getRestaurant()))
                 .body("status", hasItems(booking1.getStatus().toString(), booking2.getStatus().toString()))
                 .body("week", hasItems(booking1.getWeek(), booking2.getWeek()))
-                .body("createdAt", hasItems(booking1.getCreatedAt(), booking2.getCreatedAt()));
+        ;
     }
 
+    @Test
+    @Order(3)
+    void whenGetBookingByInvalidEmail_thenStatus404() {
+        RestAssured.when().get(BASE_URL + "?email=naoexiste@gmail.com")
+                .then().statusCode(HttpStatus.NOT_FOUND.value());
+    }
+
+    @Test
+    @Order(4)
+    void whenCancelBooking_thenStatus200() {
+        Booking booking = new Booking();
+        booking.setDayIndex(3);
+        booking.setEmail("test@example.com");
+        booking.setRestaurant("Castro");
+        booking.setStatus(BookingStatus.CONFIRMED);
+        booking.setWeek("13");
+        booking.setCreatedAt(LocalDateTime.now());
+
+        booking = bookingRepository.save(booking);
+
+        RestAssured.when().put(BASE_URL + "/" + booking.getId() + "/cancel?email=" + booking.getEmail())
+                .then().statusCode(HttpStatus.OK.value());
+
+        Booking found = bookingRepository.findByIdAndEmail(booking.getId(), booking.getEmail())
+                .stream().findFirst().orElse(null);
+        assertThat(found).isNull();
+    }
 }
